<resources>
    <string name="app_name">CiviLink</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="register1">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="email">E-mail address</string>
    <string name="login2">Login</string>
    <string name="have_an_account_login">have an account?Login</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="get_otp">Get Otp</string>
    <string name="enter">Enter</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="user_name">User Name</string>
    <string name="number">number</string>
    <string name="profile_information">Profile Information</string>
    <string name="set_profile">Set profile</string>
    <string name="_91">+91</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_a_message">Type a message....</string>
    <string name="name">name</string>
    <string name="sender_side_message">sender side message</string>
    <string name="delete_for_everyone">delete for everyone</string>
    <string name="delete_for_me">delete for me</string>
    <string name="cancel">cancel</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">286560678062-3sbvq772nhvdv1g5c3l7ejvnunkemnth.apps.googleusercontent.com</string>
</resources>