<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mainbackground"
    android:orientation="vertical"
    android:padding="24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/login"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#549EE0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/login2" />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:lottie_autoPlay="true"
        android:id="@+id/ani"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/login" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:padding="30dp"
        app:cardBackgroundColor="#FE9EB2C4"
        app:cardCornerRadius="20dp"
        android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:helperText="*Required Field"
                app:hintTextColor="@color/black"
                app:helperTextTextColor="#F44336"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextTextEmailAddress2"
                    android:padding="10dp"
                    android:lines="1"
                    android:singleLine="true"
                    android:hint="Email"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:background="@drawable/login_button_bk"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:helperText="*Required Field"
                app:hintTextColor="@color/black"
                app:helperTextTextColor="#F44336"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/editTextNumberPassword"
                    android:background="@drawable/login_button_bk"
                    android:ems="10"
                    android:lines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password"
                android:onClick="forgot"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:layout_gravity="right"/>
            <Button
                android:id="@+id/button"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:background="@drawable/login_button_bk"
                android:text="@string/login" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/text1"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account_sign_up" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:outlineAmbientShadowColor="@color/black"

        />

</LinearLayout>