<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SLF.LoginFragment">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:lottie_autoPlay="true"
            android:id="@+id/ani"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/advent_pro_medium"
                    android:textColor="@color/white"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#E3000000"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextTextEmailAddress2"
                        android:padding="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="#FFFFFF"
                        android:lines="1"
                        android:singleLine="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/advent_pro_medium"
                    android:textColor="@color/white"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#E3000000"
                    app:endIconMode="password_toggle"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNumberPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:fontFamily="@font/roboto_light"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="#FFFFFF" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot password"
                    android:onClick="forgot"
                    android:fontFamily="@font/advent_pro_medium"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"
                    android:layout_gravity="right"/>
                <Button
                    android:id="@+id/button"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="20dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/mainbg"
                    android:textColor="@color/white"
                    android:text="@string/login" />

            </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="invisible"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:outlineAmbientShadowColor="@color/black"

            />

    </LinearLayout>

</FrameLayout>